# bamm-backend

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  entrypoint.sh  manage.py  pyproject.toml  pytest.ini  requirements.txt
.config/: pyproject.toml
artists/: admin.py  models.py  serializers.py
artists/migrations/: 0001_initial.py  0002_initial.py
bamm/: asgi.py  storage_backends.py  urls.py  wsgi.py
bamm/settings/: base.py  live.py  local.py
core/: models.py  views.py
core/utils/: portone.py
orders/: models.py  serializers.py  views.py
orders/migrations/: 0001_initial.py  0002_rename_order_number_order_order_id_and_more.py  0003_alter_order_quantity_alter_order_status.py
orders/services/: order_validation_service.py
products/: admin.py  models.py  renderers.py  serializers.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_alter_product_short_description.py
users/: admin.py  dtos.py  models.py  serializers.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_username_socialloginplatform.py  0003_alter_socialloginplatform_options_and_more.py
users/services/: jwt_service.py  kakao_service.py
